# DeepTC-Enhancer-Improving-the-Readability-of-Automatically-Generated-Tests

./: README.md
Prototype/code2seq-pytorch/: .gitignore  __init__.py  eval.py  main.py  script.py  train_transformer.sh  train_transformer_vars.sh
Prototype/code2seq-pytorch/configs/: seq2seq_defaults.yml
Prototype/code2seq-pytorch/docs/: data-processing.md
Prototype/code2seq-pytorch/interactive_predictions/: interactive_predict.py
Prototype/code2seq-pytorch/notebooks/: Experiments.ipynb  Variable Paths.ipynb  eda.ipynb  inference.ipynb  transformer.ipynb  verification.ipynb
Prototype/code2seq-pytorch/preprocessing/: bpe_stats.py  chunked_pmap.py  construct_counts.py  context_utils.py  create_node_dict.py  create_variable_name_dataset.py  mask_identifiers.py  verifier.py
Prototype/code2seq-pytorch/rls/data-verifier/: Cargo.toml
Prototype/code2seq-pytorch/training/: train_seq2seq.py  train_transformer.py
Prototype/code2seq-pytorch/utilities/: BPEDataSet.py  C2SDataSet.py  FileReader.py  LossReporter.py  common.py  config.py  create_bpe_training_file.py  create_hd5_dataset.py  metrics.py  pickle-vocab.py  preprocessing.py  print_utils.py  train_bpe.py  train_bpe_better.py
Surveys/data/internal/: internal-raw.csv
datasets/: link-to-trained-models.txt
datasets/daka et al/: daka1.java  daka2.java
datasets/engineered - for model training/: engineered-projects.csv
datasets/survey samples from our top 30 dataset/sample 2/: complete.java  original.java  with_variable_names.java
datasets/test-describer/: TestDescriber1.java  TestDescriber2.java
(+134 files in other folders)
