[package]
name = "data-verifier"
version = "0.1.0"
authors = ["Devjeet Roy <devjeetrr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
itertools = "0.9.0"
clap = { git = "https://github.com/clap-rs/clap/" }